tests/frontend/pass/multi/multi.act
constructor of a
interface constructor()

creates
   uint x := 0

constructor of B
interface constructor()

creates
   uint y := 0


behaviour remote of B
interface set_remote(uint z)

iff
   CALLVALUE == 0

// we can specify how a call to a function of B
// updates the storage of another by labelling the storage header
// by the address of that contract
storage of a
   x => z

behaviour multi of B
interface set_remote(uint z)

iff
   CALLVALUE == 0

// or specify changes over multiple contracts at once
storage
   y => 1

storage of a
   x => z
